// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when there is one item each for single and multi flights 1`] = `
<div
  className="flightLists"
>
  <h1>
    FLIGHT LISTS
  </h1>
  <div
    className="flightList"
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="col-sm"
          >
            <h4>
              Air India
            </h4>
            <span>
              AI-104
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              8:10
            </h4>
            <span>
              Pune (PNQ)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              10:20
            </h4>
            <span>
              Delhi (DEL)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              2h:10m
            </h4>
            <span>
              Non Stop
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4
              className="redColor"
            >
              ₹4,681.00
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="multipleFlights"
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="col-sm"
          >
            <h4>
              Multiple
            </h4>
            <button
              className="expandFlagButton"
              onClick={[Function]}
            >
              ShowDetails
            </button>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              6:10
            </h4>
            <span>
              Pune (PNQ)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              11:30
            </h4>
            <span>
              Delhi (DEL)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4
              className="totalDuration"
            >
              5h:20m
            </h4>
            <span>
              Total Duration
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4
              className="redColor"
            >
              ₹6,674.00
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders when there is one item for single flight  and zero for multi flights 1`] = `
<div
  className="flightLists"
>
  <h1>
    FLIGHT LISTS
  </h1>
  <div
    className="flightList"
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="col-sm"
          >
            <h4>
              Air India
            </h4>
            <span>
              AI-104
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              8:10
            </h4>
            <span>
              Pune (PNQ)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              10:20
            </h4>
            <span>
              Delhi (DEL)
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4>
              2h:10m
            </h4>
            <span>
              Non Stop
            </span>
          </div>
          <div
            className="col-sm"
          >
            <h4
              className="redColor"
            >
              ₹4,681.00
            </h4>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
